2010-04-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.cs:
	* Menus/OSXMenu.cs: Cleaner OpenUrl implementation.

2010-04-27  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MacPlatform.cs:
	* MacPlatform.csproj: Call 'open' directly when opening urls
	  to avoid the -W argument that mono adds, which leaves us
	  with lots of zombie 'open' processes.

2010-04-25  Michael Hutchinson  <mhutchinson@novell.com>

	* Framework/Carbon.cs:
	* Framework/AppleEvent.cs:
	* Framework/AppleScript.cs: Moved all the AE stuff from Carbon
	  to AppleEvents.

2010-04-25  Michael Hutchinson  <mhutchinson@novell.com>

	* Framework/Carbon.cs:
	* Framework/AppleEvent.cs:
	* Framework/AppleScript.cs:
	* Framework/ComponentManager.cs: Finally, working support for
	  running AppleScript directly.

2010-04-23  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MacPlatform.csproj:
	* Framework/Carbon.cs:
	* Framework/NavDialog.cs:
	* Framework/AppleEvent.cs:
	* Framework/AppleScript.cs:
	* Framework/ComponentManager.cs: Bind some OSA/AppleScript
	  stuff.

2010-04-22  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.cs: Track API.

2010-04-19  Michael Hutchinson  <mhutchinson@novell.com>

	* Menus/OSXMenu.cs: Remove debug code.

2010-04-18  Michael Hutchinson  <mhutchinson@novell.com>

	* Menus/OSXMenu.cs: Pass source type to command dispatch. Use
	  command dispatch event to flash menubar when commands are
	  triggered from a keybinding.

	* MacPlatform.cs: Convert enum command IDs to strings in a
	  compatible way so they can be matched against the values we
	  get from the command service.

	* Framework/HIToolbox.cs: Add P/Invoke sigs.

2010-03-27  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.cs:
	* Framework/Carbon.cs:
	* Framework/ApplicationEvents.cs: Don't crash when the user
	  cancels quitting.

2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs: