@@ -1,5 +1,14 @@
 2010-04-28  Michael Hutchinson  <mhutchinson@novell.com>
 
+	* Makefile.am:
+	* MacPlatform.cs:
+	* MacPlatform.csproj:
+	* Framework/AppleScript.cs:
+	* ExternalConsoleProcess.cs: Implemented Mac external console,
+	  somewhat hackily.
+
+2010-04-28  Michael Hutchinson  <mhutchinson@novell.com>
+
 	* MacPlatform.cs:
 	* Menus/OSXMenu.cs: Cleaner OpenUrl implementation.
 
